--- a/style/generel.css
+++ b/style/generel.css
@@ -222,7 +222,7 @@ body {
  .block3_header h3{
    font-family: 'DM Sans';
    font-weight: 300;
-   font-size: 17px;
+   font-size: 18px;
    leading-trim: Cap height;
    line-height: 100%;
    letter-spacing: 0;
@@ -231,7 +231,8 @@ body {
    margin-bottom: 13px;
  }
  .block2_txt h2,
- .block3_header h2{
+ .block3_header h2,
+ .block3_txt h2{
    font-family: 'Inter';
    font-weight: 400;
    font-size: 30px;
@@ -245,10 +246,11 @@ body {
 
  }
  .block2_txt_p,
- .block3_header p {
+ .block3_header p,
+ .block3_txt p {
    font-family: 'Inter';
    font-weight: 400;
-   font-size: 16px;
+   font-size: 18px;
    leading-trim: Cap height;
    line-height: 150%;
    letter-spacing: 0;
@@ -263,7 +265,7 @@ body {
  .item p {
    font-family: 'Inter';
    font-weight: 400;
-   font-size: 16px;
+   font-size: 18px;
    leading-trim: Cap height;
    line-height: 180%;
    letter-spacing: 0;
@@ -283,7 +285,9 @@ body {
    
  }
  .block2_img img{
-   width: 100%;
+   width: 800px;
+   max-width: 100%;
+
  }
  .block2_txt.a2 {
    max-width: 694px;
@@ -291,7 +295,7 @@ body {
     margin: auto 0;
  }
  .block3 {
-    display: flex;
+    display: block;
     max-width: 1920px;
     padding: 100px 132px 100px 132px;
     margin: 0 auto;
@@ -311,6 +315,54 @@ body {
    text-align: center;
    margin: 0 auto;
  }
+ .block3_img{
+   display: flex;
+   flex-direction: column;
+ }
+ .block3_items{
+   display: flex;
+   justify-content: space-between;
+   margin-top: 90px;
+ }
+ .block3_item{
+   width: 100%;
+   height: 100px;
+   border-width: 2px;
+   border-radius: 10px;
+   border: 2px solid hsla(0, 0%, 100%, 1);
+   display: flex;
+   margin: 16px 0;
+
+ }
+ .block3_item:last-child{
+   margin: 0;
+ }
+
+ .block3_item p{
+   margin: auto 0 auto 39px;
+   
+ }
+ .block3_item div{
+      border-right: 2px solid hsla(0, 0%, 100%, 1);
+      padding: 12px 12px;
+      width: 100px;
+ }
+ .block3_txt{
+   width: 710px;
+       display: block;
+      margin: auto 0;
+ }
+ .block3_img img{
+   width: 100%;
+   margin: 18px;
+ }
+.block3_list_items{
+   margin-top: 48px;
+}
+.block2_img.a1 img{
+   width: 100%;
+}
+
 
 
 
