--- a/style/generel.css
+++ b/style/generel.css
@@ -869,7 +869,8 @@ footer {
     justify-content: center;
   }
   .nav {
-    background: hsla(0, 100%, 3%, 1);
+    background: #000000;
+
   }
   .social_links {
     width: 100%;
