--- a/style/generel.css
+++ b/style/generel.css
@@ -27,6 +27,15 @@ input:-webkit-autofill,
 input:-webkit-autofill:focus {
   transition: background-color 0s 600000s, color 0s 600000s !important;
 }
+button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+    -webkit-touch-highlight-color: rgba(0, 0, 0, 0)
+}
 html,
 body {
   margin: 0px;
