--- a/style/generel.css
+++ b/style/generel.css
@@ -28,24 +28,28 @@ input:-webkit-autofill:focus {
   transition: background-color 0s 600000s, color 0s 600000s !important;
 }
 button {
-    padding: 0;
-    border: none;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-    cursor: pointer;
-    -webkit-touch-highlight-color: rgba(0, 0, 0, 0)
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+  -webkit-touch-highlight-color: rgba(0, 0, 0, 0);
 }
 html,
 body {
   margin: 0px;
   padding: 0px;
   width: 100vw;
-  overflow-x: hidden;
+
   vertical-align: middle;
   background: hsla(0, 0%, 0%, 1);
 
   outline: 0;
+}
+body {
+  overflow-x: hidden;
+  
 }
 
 .container {
@@ -54,6 +58,8 @@ body {
   position: relative;
   max-width: 2560px;
   height: 100vh;
+  width: 100%;
+  
 }
 .shadow {
   background: hsla(0, 100%, 4%, 0.5);
@@ -189,10 +195,10 @@ body {
 }
 .main_text_block {
   background: hsla(0, 0%, 18%, 0.5);
- 
-  -webkit-backdrop-filter: blur(6px); 
+
+  -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
-   max-width: 996px;
+  max-width: 996px;
   margin-left: 70px;
   padding: 5%;
   margin-top: 133px;
@@ -264,6 +270,7 @@ body {
 }
 .item {
   display: flex;
+  transform: translateX(0%);
 }
 .item p {
   font-family: "Inter";
@@ -301,6 +308,7 @@ body {
   max-width: 1920px;
   padding: 100px 132px 100px 132px;
   margin: 0 auto;
+   overflow: hidden;
 }
 .block2.a3,
 .contact_block {
@@ -308,7 +316,7 @@ body {
   max-width: 1920px;
   margin: 0 auto;
 }
-.contact_block{
+.contact_block {
   position: relative;
 }
 .block3_header {
@@ -333,6 +341,8 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 90px;
+  visibility: hidden;
+ 
 }
 .block3_item {
   width: 100%;
@@ -342,9 +352,38 @@ body {
   border: 2px solid hsla(0, 0%, 100%, 1);
   display: flex;
   margin: 16px 0;
+  
+  
+  
+  
+}
+
+.anime1{
+  transform: translateX(150%);
+  
+}
+
+.anime1:nth-child(1) {
+  animation: ani 1.5s forwards;
+}
+.anime1:nth-child(2) {
+  animation: ani 1.5s forwards 0.5s;
+}
+.anime1:nth-child(3) {
+  animation: ani 1.5s forwards 1s;
+}
+.anime1:nth-child(4) {
+  animation: ani 1.5s forwards 1.5s;
+}
+.anime1:nth-child(5) {
+  animation: ani 1.5s forwards 2s;
 }
 .block3_item:last-child {
   margin: 0;
+}
+@keyframes ani {
+  0% {transform: translateX(150%);}
+  100% {transform: translateY(0);}
 }
 
 .block3_item p {
@@ -449,7 +488,6 @@ body {
   line-height: 100%;
   letter-spacing: 0%;
   text-transform: uppercase;
-  
 }
 .button_active {
   background: hsla(175, 66%, 51%, 1);
@@ -523,7 +561,7 @@ footer {
   font-family: "Montserrat";
   font-weight: 300;
   font-size: 16px;
-  
+
   line-height: 100%;
   letter-spacing: 0;
   color: hsla(0, 0%, 100%, 1);
@@ -533,7 +571,7 @@ footer {
   font-family: "Montserrat";
   font-weight: 500;
   font-size: 16px;
-  
+
   line-height: 100%;
   letter-spacing: 0;
 }
@@ -547,15 +585,14 @@ footer {
 .main_text_b {
   display: none;
   background: hsla(0, 0%, 18%, 0.5);
-  -webkit-backdrop-filter:blur(6px);
+  -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
- 
 }
 .main_text_b h1 {
   font-family: "Inter";
   font-weight: 400;
   font-size: 75px;
-  
+
   line-height: 125%;
   letter-spacing: 7px;
   color: hsla(0, 0%, 100%, 1);
@@ -563,97 +600,93 @@ footer {
 .link {
   position: relative;
 }
-.link::after{
-   left: 50%;
+.link::after {
+  left: 50%;
   transform: translate(-50%);
- 
+
   position: absolute;
-  content: '';
+  content: "";
   bottom: 0;
   display: block;
   width: 0;
   height: 2px;
   background: #282c34;
-  transition: .3s;
+  transition: 0.3s;
 }
 .link:hover:after {
   width: 100%;
 }
-.social_links div:hover{
-  transform: scale(0.95); 
+.social_links div:hover {
+  transform: scale(0.95);
 }
-.result{
+.result {
   width: 500px;
   height: 276px;
   border-radius: 10px;
-  background: #30D5C8;
+  background: #30d5c8;
   padding: 30px 30px;
   position: absolute;
-   top:  50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: none;
   z-index: 12;
-
-
 }
-.result div h3{
-  font-family: 'Inter';
+.result div h3 {
+  font-family: "Inter";
   font-weight: 400;
   font-size: 50px;
-  
+
   line-height: 100%;
   letter-spacing: 0;
   text-align: center;
   text-transform: uppercase;
-  color:  #000000;
-
+  color: #000000;
 }
-.result div p{
-  font-family: 'Inter';
+.result div p {
+  font-family: "Inter";
   font-weight: 400;
   font-size: 20px;
-  
+
   line-height: 150%;
   letter-spacing: 0;
   text-align: center;
-  color:  #000000;
+  color: #000000;
   margin-top: 20px;
-
 }
-.close::before, .close::after{
+.close::before,
+.close::after {
   content: "";
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all 0.2s ease-out;
-    width: 100%;
-    background: #0D0000;
-    transform: matrix(1, 0, 0, -1, 0, 0);
-    border-radius: 10px;
-    
-    top: 0;
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all 0.2s ease-out;
+  width: 100%;
+  background: #0d0000;
+  transform: matrix(1, 0, 0, -1, 0, 0);
+  border-radius: 10px;
+
+  top: 0;
 }
-.close::before{
+.close::before {
   transform: rotate(-45deg);
 }
-.close::after{
+.close::after {
   transform: rotate(45deg);
 }
 
-.close{
+.close {
   display: block;
-    height: 5px;
-    position: relative;
-    width: 35px;
-    float: right;
-    transform: matrix(1, 0, 0, -1, 0, 0);
-    border-radius: 10px;
+  height: 5px;
+  position: relative;
+  width: 35px;
+  float: right;
+  transform: matrix(1, 0, 0, -1, 0, 0);
+  border-radius: 10px;
 }
-.result div{
+.result div {
   margin: 30px;
 }
-
 
 
 @media (min-width: 1026px) {
@@ -682,7 +715,6 @@ footer {
   .contact_in_menu {
     display: none;
   }
-
 }
 @media (min-width: 1921px) {
   .up_block {
@@ -735,7 +767,7 @@ footer {
     margin: 19px 3%;
     width: 794px;
   }
-  .menu li a{
+  .menu li a {
     font-size: 17px;
     font-weight: 300;
   }
@@ -972,7 +1004,6 @@ footer {
   }
   .nav {
     background: #000000;
-
   }
   .social_links {
     width: 100%;
@@ -982,8 +1013,9 @@ footer {
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     flex-direction: row;
+   
   }
- 
+
   footer {
     display: none;
   }
@@ -1043,10 +1075,10 @@ footer {
   .input::placeholder {
     font-size: 16px;
   }
-  .result{
+  .result {
     width: 370px;
   }
-  .result div h3{
+  .result div h3 {
     font-size: 40px;
   }
   .result div p {
@@ -1144,22 +1176,22 @@ footer {
   .main_text_b {
     padding: 50px 30px;
   }
-      .result div h3 {
-        font-size: 38px;
-    }
-    .result div p {
-        font-size: 17px;
-    }
-        .result {
-        width: 300px;
-        padding: 30px 20px;
-    }
-    .close {
-      width: 30px;
-    }
-        .result div {
-        margin: 30px 10px 10px 10px;
-    }
+  .result div h3 {
+    font-size: 38px;
+  }
+  .result div p {
+    font-size: 17px;
+  }
+  .result {
+    width: 300px;
+    padding: 30px 20px;
+  }
+  .close {
+    width: 30px;
+  }
+  .result div {
+    margin: 30px 10px 10px 10px;
+  }
 }
 @media (max-width: 450px) {
   .main_text_b h1 {
@@ -1256,7 +1288,7 @@ footer {
     margin-top: 40px;
   }
   .powered,
-  .powered a span{
+  .powered a span {
     font-size: 12px;
   }
 }
@@ -1289,20 +1321,20 @@ footer {
     width: 280px;
   }
   .menu,
-  .header_logo img  {
+  .header_logo img {
     width: 240px;
   }
-      .result div h3 {
-        font-size: 36px;
-    }
-        .result div p {
-        font-size: 15px;
-    }
-        .result {
-        width: 280px;
-        padding: 30px 10px;
-            height: 250px;
-    }
+  .result div h3 {
+    font-size: 36px;
+  }
+  .result div p {
+    font-size: 15px;
+  }
+  .result {
+    width: 280px;
+    padding: 30px 10px;
+    height: 250px;
+  }
 }
 @media (max-width: 350px) {
   .block2_txt_p,
