--- a/style/generel.css
+++ b/style/generel.css
@@ -195,7 +195,7 @@ body {
 }
 .main_text_block {
   background: hsla(0, 0%, 18%, 0.5);
-
+  width: 49%;
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
   max-width: 996px;
@@ -835,10 +835,13 @@ footer {
   .block2_img.a1 img {
     width: 43%;
   }
+      .main_text_block h1 {
+        font-size: 88px;
+    }
 }
 @media (max-width: 1600px) {
   .main_text_block h1 {
-    font-size: 85px;
+    font-size: 79px;
   }
   .menu {
     margin: 19px 3%;
@@ -884,7 +887,7 @@ footer {
 }
 @media (max-width: 1439px) {
   .main_text_block h1 {
-    font-size: 75px;
+    font-size: 68px;
   }
   .block2 {
     padding: 100px 75px 50px 75px;
